--- a/Wcms8Qspider/pom.xml
+++ b/Wcms8Qspider/pom.xml
@@ -36,7 +36,7 @@
 </dependency>
 <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
 <dependency>
-    <groupId>io.github.bonigarcia</groupId>
+    <groupId>io.github.bonigarcia</groupId> 
     <artifactId>webdrivermanager</artifactId>
     <version>5.3.2</version>
 </dependency>
@@ -64,5 +64,19 @@
     <artifactId>log4j-core</artifactId>
     <version>2.20.0</version>
 </dependency>
+
+<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
+<dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi-ooxml</artifactId>
+    <version>5.2.3</version>
+</dependency>
+
+
+  	<dependency>
+  		<groupId>DemoProject</groupId>
+  		<artifactId>DemoProject</artifactId>
+  		<version>0.0.1-SNAPSHOT</version>
+  	</dependency>
   </dependencies>
 </project>
