--- a/e-CommerceHybrid/pom.xml
+++ b/e-CommerceHybrid/pom.xml
@@ -2,12 +2,12 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>DemoProject</groupId>
-  <artifactId>DemoProject</artifactId>
+  <groupId>e-CommerceHybrid</groupId>
+  <artifactId>e-CommerceHybrid</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>DemoProject</name>
+  <name>e-CommerceHybrid</name>
   <url>http://maven.apache.org</url>
 
   <properties>
